--- a/Portpholios.html
+++ b/Portpholios.html
@@ -1,139 +1,153 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="./css/style.css">
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!--Шапка сайту-->
     <header class="header">
-      <a href="/" class="logo">
+      <div class="container header-list">
+        <a href="./index.html" class="logo">
           Web<span class="header-logo-accent">Studio</span></a
         >
-      <nav class="header-nav">
-        <ul class="list">
-          <li><a href="./index.html" class="nav-link">Студія</a></li>
-          <li><a href="./Portpholios.html" class="nav-link">Портфоліо</a></li>
-          <li><a href="#" class="nav-link">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a href="mailto:nfo@devstudio.com" class="mail-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="phone-link">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
-    <!-- our works -->
-    <main>
-      <h1 class="visually-hidden">Our works</h1>
-      <ul class="list">
-        <li><button type="button" class="btn-list">Усі</button></li>
-        <li><button type="button" class="btn-list">Веб-сайти</button></li>
-        <li><button type="button" class="btn-list">Додатки</button></li>
-        <li><button type="button" class="btn-list">Дизайн</button></li>
-        <li><button type="button" class="btn-list">Маркетинг</button></li>
-      </ul>
-      <ul class="list">
-        <li>
-          <img src="./image/portfolios1.jpg" alt="Комп'ютер" width="370">
-          <h2 class="works-title">Технокряк</h2>
-          <p class="works-descr">Веб-сайт</p>
-        </li>
-        <li>
-          <img
-            src="./image/portfolios2.jpg"
-            alt="Постер з баскетболістами"
-            width="370"
-          />
-          <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
-          <p class="works-descr">Дизайн</p>
-        </li>
-        <li>
-          <img
-            src="./image/portfolios3.jpg"
-            alt="Логотип ресторану"
-            width="370"
-          />
-          <h2 class="works-title">Ресторан Seafood</h2>
-          <p class="works-descr">Додаток</p>
-        </li>
-        <li>
-          <img src="./image/portfolios4.jpg" alt="Наушники" width="370">
-          <h2 class="works-title">Проєкт Prime</h2>
-          <p class="works-descr">Маркетинг</p>
-        </li>
-        <li>
-          <img src="./image/portfolios5.jpg" alt="Коробки" width="370">
-          <h2 class="works-title">Проєкт Boxes</h2>
-          <p class="works-descr">Додаток</p>
-        </li>
-        <li>
-          <img src="./image/portfolios6.jpg" alt="Монитор" width="370">
-          <h2 class="works-title" lang="en">Inspiration has no Borders</h2>
-          <p class="works-descr">Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./image/portfolios7.jpg" alt="Книга" width="370">
-          <h2 class="works-title">Видання Limited Edition</h2>
-          <p class="works-descr">Дизайн</p>
-        </li>
-        <li>
-          <img src="./image/portfolios8.jpg" alt="Бірка" width="370">
-          <h2 class="works-title">Проєкт LAB</h2>
-          <p class="works-descr">Маркетинг</p>
-        </li>
-        <li>
-          <img src="./image/portfolios9.jpg" alt="Ноутбук" width="370">
-          <h2 class="works-title" lang="en">Growing Business</h2>
-          <p class="works-descr">Додаток</p>
-        </li>
-      </ul>
-    </main>
-    <!-- footer -->
-    <footer class="footer">
-      <a href="/" class="footer-logo">
-        Web<span class="footer-logo-accent">Studio</span></a
-      >
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="address-link"
-              >м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-mail"
+        <nav class="header-nav">
+          <ul class="nav-list list">
+            <li class="nav-item"><a href="#" class="nav-link">Студія</a></li>
+            <li class="nav-item">
+              <a href="./Portpholios.html" class="nav-link">Портфоліо</a>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contact-list list">
+          <li class="contact-item">
+            <a href="mailto:nfo@devstudio.com" class="mail-link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a>
+          <li class="contact-item">
+            <a href="tel:+380961111111" class="phone-link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <!-- our works -->
+    <main>
+      <section class="section">
+        <div class="container">
+          <h1 class="visually-hidden">Our works</h1>
+          <ul class="portfolio-btn-list list">
+            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Усі</button></li>
+            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Веб-сайти</button></li>
+            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Додатки</button></li>
+            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Дизайн</button></li>
+            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Маркетинг</button></li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <img class="portfolio-img" src="./image/portfolios1.jpg" alt="Комп'ютер" width="370" />
+              <h2 class="works-title">Технокряк</h2>
+              <p class="works-descr">Веб-сайт</p>
+            </li>
+            <li class="portfolio-item">
+              <img class="portfolio-img"
+                src="./image/portfolios2.jpg"
+                alt="Постер з баскетболістами"
+                width="370"
+              />
+              <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
+              <p class="works-descr">Дизайн</p>
+            </li>
+            <li class="portfolio-item">
+              <img class="portfolio-img"
+                src="./image/portfolios3.jpg"
+                alt="Логотип ресторану"
+                width="370"
+              />
+              <h2 class="works-title">Ресторан Seafood</h2>
+              <p class="works-descr">Додаток</p>
+            </li>
+            <li class="portfolio-item">
+              <img class="portfolio-img" src="./image/portfolios4.jpg" alt="Наушники" width="370" />
+              <h2 class="works-title">Проєкт Prime</h2>
+              <p class="works-descr">Маркетинг</p>
+            </li>
+            <li class="portfolio-item">
+              <img class="portfolio-img" src="./image/portfolios5.jpg" alt="Коробки" width="370" />
+              <h2 class="works-title">Проєкт Boxes</h2>
+              <p class="works-descr">Додаток</p>
+            </li>
+            <li class="portfolio-item">
+              <img class="portfolio-img" src="./image/portfolios6.jpg" alt="Монитор" width="370" />
+              <h2 class="works-title" lang="en">Inspiration has no Borders</h2>
+              <p class="works-descr">Веб-сайт</p>
+            </li>
+            <li class="portfolio-item">
+              <img class="portfolio-img" src="./image/portfolios7.jpg" alt="Книга" width="370" />
+              <h2 class="works-title">Видання Limited Edition</h2>
+              <p class="works-descr">Дизайн</p>
+            </li>
+            <li class="portfolio-item">
+              <img class="portfolio-img" src="./image/portfolios8.jpg" alt="Бірка" width="370" />
+              <h2 class="works-title">Проєкт LAB</h2>
+              <p class="works-descr">Маркетинг</p>
+            </li>
+            <li class="portfolio-item">
+              <img class="portfolio-img" src="./image/portfolios9.jpg" alt="Ноутбук" width="370" />
+              <h2 class="works-title" lang="en">Growing Business</h2>
+              <p class="works-descr">Додаток</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="footer-logo">
+          Web<span class="footer-logo-accent">Studio</span></a
+        >
+        <address class="address">
+          <ul class="address-list list">
+            <li class="address-item">
+              <a
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="address-link"
+                >м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="footer-mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+380961111111" class="footer-tel"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
