--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!--Ефективні рішення-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для<br> вашого бізнесу</h1>
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="btn">Замовити послугу</button>
         </div>
       </section>
