--- a/Portpholios.html
+++ b/Portpholios.html
@@ -29,7 +29,9 @@
         >
         <nav class="header-nav">
           <ul class="nav-list list">
-            <li class="nav-item"><a href="#" class="nav-link">Студія</a></li>
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Студія</a>
+            </li>
             <li class="nav-item">
               <a href="./Portpholios.html" class="nav-link">Портфоліо</a>
             </li>
@@ -54,65 +56,132 @@
         <div class="container">
           <h1 class="visually-hidden">Our works</h1>
           <ul class="portfolio-btn-list list">
-            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Усі</button></li>
-            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Веб-сайти</button></li>
-            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Додатки</button></li>
-            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Дизайн</button></li>
-            <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Маркетинг</button></li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Усі</button>
+            </li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Веб-сайти</button>
+            </li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Додатки</button>
+            </li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Дизайн</button>
+            </li>
+            <li class="portfolio-btn-item">
+              <button type="button" class="portfolio-btn">Маркетинг</button>
+            </li>
           </ul>
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <img class="portfolio-img" src="./image/portfolios1.jpg" alt="Комп'ютер" width="370" />
-              <h2 class="works-title">Технокряк</h2>
-              <p class="works-descr">Веб-сайт</p>
+              <img
+                class="portfolio-img"
+                src="./image/portfolios1.jpg"
+                alt="Комп'ютер"
+                width="370"
+              />
+              <div class="portfolio-descr">
+                <h2 class="works-title">Технокряк</h2>
+                <p class="works-descr">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-img"
+              <img
+                class="portfolio-img"
                 src="./image/portfolios2.jpg"
                 alt="Постер з баскетболістами"
                 width="370"
               />
-              <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
-              <p class="works-descr">Дизайн</p>
+              <div class="portfolio-descr">
+                <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
+                <p class="works-descr">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-img"
+              <img
+                class="portfolio-img"
                 src="./image/portfolios3.jpg"
                 alt="Логотип ресторану"
                 width="370"
               />
-              <h2 class="works-title">Ресторан Seafood</h2>
-              <p class="works-descr">Додаток</p>
+              <div class="portfolio-descr">
+                <h2 class="works-title">Ресторан Seafood</h2>
+                <p class="works-descr">Додаток</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-img" src="./image/portfolios4.jpg" alt="Наушники" width="370" />
-              <h2 class="works-title">Проєкт Prime</h2>
-              <p class="works-descr">Маркетинг</p>
+              <img
+                class="portfolio-img"
+                src="./image/portfolios4.jpg"
+                alt="Наушники"
+                width="370"
+              />
+              <div class="portfolio-descr">
+                <h2 class="works-title">Проєкт Prime</h2>
+                <p class="works-descr">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-img" src="./image/portfolios5.jpg" alt="Коробки" width="370" />
-              <h2 class="works-title">Проєкт Boxes</h2>
-              <p class="works-descr">Додаток</p>
+              <img
+                class="portfolio-img"
+                src="./image/portfolios5.jpg"
+                alt="Коробки"
+                width="370"
+              />
+              <div class="portfolio-descr">
+                <h2 class="works-title">Проєкт Boxes</h2>
+                <p class="works-descr">Додаток</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-img" src="./image/portfolios6.jpg" alt="Монитор" width="370" />
-              <h2 class="works-title" lang="en">Inspiration has no Borders</h2>
-              <p class="works-descr">Веб-сайт</p>
+              <img
+                class="portfolio-img"
+                src="./image/portfolios6.jpg"
+                alt="Монитор"
+                width="370"
+              />
+              <div class="portfolio-descr">
+                <h2 class="works-title" lang="en">
+                  Inspiration has no Borders
+                </h2>
+                <p class="works-descr">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-img" src="./image/portfolios7.jpg" alt="Книга" width="370" />
-              <h2 class="works-title">Видання Limited Edition</h2>
-              <p class="works-descr">Дизайн</p>
+              <img
+                class="portfolio-img"
+                src="./image/portfolios7.jpg"
+                alt="Книга"
+                width="370"
+              />
+              <div class="portfolio-descr">
+                <h2 class="works-title">Видання Limited Edition</h2>
+                <p class="works-descr">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-img" src="./image/portfolios8.jpg" alt="Бірка" width="370" />
-              <h2 class="works-title">Проєкт LAB</h2>
-              <p class="works-descr">Маркетинг</p>
+              <img
+                class="portfolio-img"
+                src="./image/portfolios8.jpg"
+                alt="Бірка"
+                width="370"
+              />
+              <div class="portfolio-descr">
+                <h2 class="works-title">Проєкт LAB</h2>
+                <p class="works-descr">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-img" src="./image/portfolios9.jpg" alt="Ноутбук" width="370" />
-              <h2 class="works-title" lang="en">Growing Business</h2>
-              <p class="works-descr">Додаток</p>
+              <img
+                class="portfolio-img"
+                src="./image/portfolios9.jpg"
+                alt="Ноутбук"
+                width="370"
+              />
+              <div class="portfolio-descr">
+                <h2 class="works-title" lang="en">Growing Business</h2>
+                <p class="works-descr">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
